--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Tetris</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="tetris.ico">
 </head>
 <body style="margin: 0;height: 100vh; overflow: hidden;">
   <app-root></app-root>
