--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="tetris.ico">
 </head>
-<body style="margin: 0;height: 100vh; overflow: hidden;">
+<body style="background-color:black; margin:0;">
   <app-root></app-root>
 </body>
 </html>
